# WizardEye

./: LICENSE  README.md  config.ini  config_empty.ini  main.py  plot.R  pyproject.toml
.github/workflows/: test.yml
modules/: fastatools.py  scores.py  truthchecker.py
src/wizardeye/: __main__.py  cli.py  db.py  filter.py  mappability.py  utils.py  version.py
tests/: generate_cross_mappability_filter_bwa.sh
tests/e2e/: consistency.py  coverage.py
tests/fixtures/: canis_lupus_chr1_25_1kbp.fa  hg19_chr1_25_1kbp.fa  rattus_norvegicus_chr1_25_1kbp.fa  sus_scrofa_chr1_25_1kbp.fa  ursus_1000000.uniq.L35MQ25.bam
tests/integration/: consistency.py  coverage.py
