[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizardeye"
dynamic = ["version"]
description = "Cross-mappability helper CLI"
readme = "./README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
  "typer>=0.9",
  "PyYAML>=6.0",
  "pysam>=0.22",
]

[project.scripts]
wizardeye = "wizardeye.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wizardeye.version.PACKAGE_VERSION"}
