[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WizardEye"
dynamic = ["version"]
description = "A Python tool to create, manage, and filter by cross-mappability tracks."
readme = "./README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
  "typer>=0.9",
  "PyYAML>=6.0",
  "pysam>=0.22",
  "pyBigWig>=0.3.25",
  "numpy"
]

[project.optional-dependencies]
test = ["pytest>=7.0","ruff>=0.15.14"]

[project.scripts]
wizardeye = "wizardeye.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wizardeye.version.PACKAGE_VERSION"}
